# bmstu-maiba

./: .gitignore  README.md  pyproject.toml
course_project/: main.py
course_project/src/: data_pipeline.py  model_training.py  predict.py
dev/: .env.template  analyze_review_sentiment.py  discover_dataset_logic.py  generate.ps1  generate_AI_prompt.py  generate_data_index.py  generate_examples_from_raw_text.py  generate_instructions.py  generate_multimodal_data.py  generate_templates.py  generate_text_from_ipynb.py  pyproject.toml  test_sentiment_model.py  utils.py
dev/examples/course_project/: main.py
dev/examples/course_project/notebooks/: 01_EDA.ipynb  02_Preprocessing.ipynb  04_Final_Model.ipynb  05_XAI.ipynb  06_Forecasting_Diagnostics.ipynb
dev/examples/course_project/src/: data_pipeline.py  forecasting.py  model_training.py  predict.py
dev/examples/seminars/: seminar_1_data_cleaning.ipynb  seminar_2_rfm_clustering.ipynb  seminar_3_feature_engineering.ipynb  seminar_4_nlp_sentiment.ipynb  seminar_5_ml_modeling.ipynb  seminar_6_automl_shap.ipynb  seminar_7_time_series.ipynb  seminar_8_integration_bi.ipynb
seminars/: help_me.md  seminar_1_data_cleaning.ipynb  seminar_2_rfm_clustering.ipynb  seminar_3_feature_engineering.ipynb  seminar_4_nlp_sentiment.ipynb  seminar_5_ml_modeling.ipynb  seminar_6_automl_shap.ipynb  seminar_7_time_series.ipynb  seminar_8_integration_bi.ipynb
