[project]
name = "maiba-bi-dev"
version = "0.1.0"
description = "Шаблон курсового проекта по ИИ в бизнес-аналитике"
requires-python = ">=3.11,<3.13" 
dependencies = [
    # Загрузка данных и инфраструктура
    "kagglehub>=1.0.0",     # Официальный клиент для автоматического скачивания датасетов с Kaggle
    # Анализ данных и EDA
    "pandas>=2.1.0,<3.0.0", # Предобработка, очистка и манипуляции с табличными данными
    "numpy>=1.26.0,<2.0.0",  # Математические функции и высокопроизводительные вычисления
    # Визуализация данных
    "matplotlib>=3.8.0",    # Базовое построение графиков и диаграмм
    "seaborn>=0.13.0",      # Статистическая визуализация данных
    "plotly>=5.18.0",       # Интерактивные графики для бизнес-отчетов
    # Запуск нейросетей
    "transformers>=5.0.0",   # Загрузка и запуск предобученных моделей от Hugging Face
    "torch>=2.10.0",         # Фреймворк глубокого обучения (PyTorch) в качестве бэкенда для CPU
    "sentencepiece>=0.2.0",  # Необходим для токенизации мультиязычных моделей (XLM-RoBERTa)
    "protobuf>=4.25.0",      # Вспомогательная зависимость для корректной работы токенизатора
    "tokenizers<0.23",
    # Машинное обучение и Прогнозирование
    "scikit-learn>=1.4.0,<1.6.0", # Традиционные алгоритмы ML (регрессия, классификация, кластеризация)
    "prophet>=1.1.5",       # Прогнозирование временных рядов (спрос, продажи) от Meta
    # Обработка текста (NLP)
    "textblob>=0.17.1",     # Анализ тональности отзывов и текстовых данных
    # AutoML и Объяснимый ИИ (XAI)
    "pycaret>=4.0.0a5",     # Low-code библиотека для автоматического подбора лучших ML-моделей
    "shap>=0.44.0",         # Интерпретация предсказаний модели («черного ящика») для бизнеса
    # Интеграция и Deployment
    "fastapi>=0.110.0",     # Создание локального API для передачи прогнозов в BI-системы
    "uvicorn>=0.28.0",      # Высокопроизводительный сервер для запуска веб-приложений FastAPI
    "ipykernel>=6.29.0",    # Обеспечение работы Jupyter Notebook внутри виртуального окружения     # Исправление TqdmWarning: Обеспечивает отрисовку графических статус-баров
    "ipywidgets>=8.0.0",
    "google-auth>=2.55.1",
    "google-api-python-client>=2.198.0",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
    "google-auth-oauthlib>=1.4.0",
    "gspread>=6.2.1",
    "nbformat>=5.10.4",
]

[tool.uv]
package = false
# Explicitly instruct uv to allow the pre-release for pycaret
prerelease = "allow"
